# kanidm-operator

./: .editorconfig  .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  server.toml  skaffold.yaml  test.py
kanidm_operator/: __init__.py  __main__.py  auth.py  deployer.py  kanidm.py
kanidm_operator/deploy/: account.py  badlist.py  group.py  kanidm.py  service_account.py
kanidm_operator/models/: person.py
kanidm_operator/templates/: certificate.yaml  configmap.yaml  deployment.yaml  ingress.yaml  pvc-backups.yaml  pvc-db.yaml  secret.yaml  server.toml  service.yaml
kanidm_operator/typing/: account.py  badlist.py  group.py  kanidm.py  service_account.py
manifests/crds/: account.yaml  group.yaml  kandim.yaml  kustomization.yaml  oauth2-client.yaml  pw-badlist.yaml  service-account.yaml
manifests/example/: kanidm.yaml  kustomization.yaml
manifests/operator/: cluster-role-binding.yaml  cluster-role.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  role-binding.yaml  role.yaml  service-account.yaml
